--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -6,7 +6,6 @@
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
 
-
     <application
         android:allowBackup="true"
         android:icon="@mipmap/ic_launcher"
@@ -27,7 +26,8 @@
         <activity android:name=".consumer_signup" />
         <activity android:name=".StoreList" />
         <activity android:name=".Main2Activity" />
-        <activity android:name=".SingleProductLayout"></activity>
+        <activity android:name=".SingleProductLayout" />
+        <activity android:name=".Provider"></activity>
     </application>
 
 </manifest>
